--- a/app/views/roles/_editable_role.html.erb
+++ b/app/views/roles/_editable_role.html.erb
@@ -12,6 +12,33 @@
 
       <div class="row">
         <div class="medium-3 columns">
+          <%= f.label :transfer, t("role.transfer_label"), :class=>'key'  %>
+        </div>
+        <div class="medium-8 columns">
+          <label class="left">
+            <%= f.check_box :transfer%>
+            <%= t("true") %>
+          </label>
+        </div>
+        <div class="medium-1 columns">
+        </div>
+      </div>
+      <div class="row">
+        <div class="medium-3 columns">
+          <%= f.label :referral, t("role.referral_label"), :class=>'key'  %>
+        </div>
+        <div class="medium-8 columns">
+          <label class="left">
+            <%= f.check_box :referral%>
+            <%= t("true") %>
+          </label>
+        </div>
+        <div class="medium-1 columns">
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="medium-3 columns">
           <span class="tool-tip-label">
             <%= f.label :permissions, t("permissions.label"), :class => 'key' %>
           </span>
