--- a/app/views/roles/show.html.erb
+++ b/app/views/roles/show.html.erb
@@ -40,6 +40,28 @@
                 </div>
                 <div class="row">
                   <div class="medium-4 columns">
+                    <%= f.label :transfer, t("role.transfer_label"), :class=>'key'  %>
+                  </div>
+                  <div class="medium-8 columns">
+                    <label class="left">
+                      <%= f.check_box :transfer, :disabled => "disabled"%>
+                      <%= t("true") %>
+                    </label>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="medium-4 columns">
+                    <%= f.label :referral, t("role.referral_label"), :class=>'key'  %>
+                  </div>
+                  <div class="medium-8 columns">
+                    <label class="left">
+                      <%= f.check_box :referral, :disabled => "disabled"%>
+                      <%= t("true") %>
+                    </label>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="medium-4 columns">
                     <%= f.label :permissions, t("permissions.label"), :class=>'key'  %>
                   </div>
                   <div class="medium-8 columns">
