--- a/app/views/reports/_report_filter.html.erb
+++ b/app/views/reports/_report_filter.html.erb
@@ -38,11 +38,17 @@
   <% if (type.present? && !(['date_field','numeric_field'].include?(type))) || hidden %>
     <div class="report_filter_value_string_row" style="<%= hidden ? 'display: none;':'' %>">
       <div class="medium-11 columns end">
-        <input class="<%= hidden ? 'report_filter_input_template' : 'report_filter_input' %>"
-               type="text"
-               id="<%= "report_filters_#{index}_value_str"%>"
-               name="<%= "report[filters][#{index}][value]" %>"
-               value="<%= value %>">
+        <select class="<%= hidden ? 'report_filter_input_template' : 'report_filter_input' %>"
+                data-placeholder="<%= t('fields.select_box_empty_item') %>"
+                id="<%= "report_filters_#{index}_value_str"%>"
+                name="<%= "report[filters][#{index}][value][]" %>"
+                multiple="multiple">
+          <%= options_for_select(
+                lookups_list_from_field(Field.find_by_name(attribute)),
+                value
+              )
+          %>
+        </select>
       </div>
     </div>
   <% end %>
