--- a/app/views/record_shared/_actions.html.erb
+++ b/app/views/record_shared/_actions.html.erb
@@ -4,6 +4,10 @@
     <ul>
       <%= render 'imports/button' %>
       <%= render 'exports/button', locals: { model: model } %>
+      <% if model == Child %>
+      <%= render 'referrals/button', locals: { model: model } %>
+      <%= render 'transfers/button', locals: { model: model } %>
+      <% end %>
     </ul>
   </li>
 </ul>
