--- a/app/views/referrals/_button.html.erb
+++ b/app/views/referrals/_button.html.erb
@@ -7,7 +7,24 @@
 
   <div id="referral-modal" class="reveal-modal tiny" data-reveal>
     <a class="close-reveal-modal">&#215;</a>
-    <%= "WORK IN PROGRESS..." %>
+    <%= form_tag(url_for(:action => 'referral'), {:multipart => true, :method => 'post', :autocomplete => "off"}) do %>
+        <label><%=I18n.t("referrals.type_label")%>
+          <%# TODO get list of referral types%>
+          <%= select_tag("referral_type", options_for_select(Importers::ACTIVE_IMPORTERS.map {|i| [i.display_name, i.id]}, 'csv')) %>
+        </label>
+        <label><%=I18n.t("referrals.existing_user_label")%>
+          <%= select_tag("existing_user", options_for_select(@associated_users, @current_user.user_name)) %>
+        </label>
+        <label><%=I18n.t("referrals.other_user_label")%>
+          <%= text_field_tag("other_user") %>
+        </label>
+        <label><%=I18n.t("referrals.other_user_agency_label")%>
+          <%= text_field_tag("other_user_agency") %>
+        </label>
+        <div class="import_button">
+          <%= submit_tag(t("buttons.submit"), class: 'green-button right') %>
+        </div>
+      <% end %>
   </div>
 </li>
 <% end %>
