--- a/app/views/referrals/_button.html.erb
+++ b/app/views/referrals/_button.html.erb
@@ -9,8 +9,7 @@
     <a class="close-reveal-modal">&#215;</a>
     <%= form_tag(url_for(:action => 'referral'), {:multipart => true, :method => 'post', :autocomplete => "off"}) do %>
         <label><%=I18n.t("referrals.type_label")%>
-          <%# TODO get list of referral types%>
-          <%= select_tag("referral_type", options_for_select(Importers::ACTIVE_IMPORTERS.map {|i| [i.display_name, i.id]}, 'csv')) %>
+          <%= select_tag("referral_type", options_for_select(@referral_roles.map {|r| [r.name, r.id]}, '')) %>
         </label>
         <label><%=I18n.t("referrals.existing_user_label")%>
           <%= select_tag("existing_user", options_for_select(@associated_users, @current_user.user_name)) %>
@@ -20,6 +19,16 @@
         </label>
         <label><%=I18n.t("referrals.other_user_agency_label")%>
           <%= text_field_tag("other_user_agency") %>
+        </label>
+        <label><%=I18n.t("referrals.service_label")%>
+          <%#TODO - get list of services%>
+          <%= select_tag("service", options_for_select(@referral_roles.map {|r| [r.name, r.id]}, '')) %>
+        </label>
+        <label><%=I18n.t("referrals.notes_label")%>
+          <%= text_area_tag("notes") %>
+        </label>
+        <label><%=I18n.t("referrals.remote_primero_label")%>
+          <%= check_box_tag("remote_primero", "true") %>
         </label>
         <div class="import_button">
           <%= submit_tag(t("buttons.submit"), class: 'green-button right') %>
