--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -44,7 +44,7 @@
       <% end %>
     </div>
     <div id="sidebar" class="large-3 columns">
-      <%= render 'recently_flagged', recently_flagged: @recently_flagged, recently_flagged_count: @recently_flagged_count, model: Child %>
+      <%= render 'recently_flagged', recently_flagged: @recently_flagged, model: Child %>
     </div>
   </div>
   <% end %>
@@ -55,7 +55,7 @@
       <%= render 'open_incidents', open_incidents: @open_incidents %>
     </div>
     <div id="sidebar" class="large-3 columns">
-      <%= render 'recently_flagged', recently_flagged: @incidents_recently_flagged, recently_flagged_count: @incidents_recently_flagged_count, model: Incident %>
+      <%= render 'recently_flagged', recently_flagged: @incidents_recently_flagged, model: Incident %>
     </div>
   </div>
   <% end %>
@@ -66,7 +66,7 @@
       <%= render 'open_gbv_incidents', open_incidents: @open_gbv_incidents %>
     </div>
     <div id="sidebar" class="large-3 columns">
-      <%= render 'recently_flagged', recently_flagged: @gbv_incidents_recently_flagged, recently_flagged_count: @gbv_incidents_recently_flagged_count, model: Incident %>
+      <%= render 'recently_flagged', recently_flagged: @gbv_incidents_recently_flagged, model: Incident %>
     </div>
   </div>
   <% end %>
