--- a/app/views/record_shared/_actions.html.erb
+++ b/app/views/record_shared/_actions.html.erb
@@ -4,9 +4,10 @@
     <ul>
       <%= render 'imports/button' %>
       <%= render 'exports/button', locals: { model: model } %>
+      <%#TODO - if this is made available for other models, routes will have to be added%>
       <% if model == Child %>
-        <%= render 'referrals/button', locals: { model: model } %>
-        <%= render 'transfers/button', locals: { model: model } %>
+        <%= render 'referrals/button' %>
+        <%= render 'transfers/button' %>
       <% end %>
     </ul>
   </li>
