--- a/app/views/referrals/_button.html.erb
+++ b/app/views/referrals/_button.html.erb
@@ -11,7 +11,7 @@
 
   <div id="referral-modal" class="reveal-modal tiny" data-reveal>
     <a class="close-reveal-modal">&#215;</a>
-    <%= form_tag(url_for(:action => 'referral'), {:multipart => true, :method => 'post', :autocomplete => "off"}) do %>
+    <%= form_tag(url_for(:action => 'referral', :id => (defined?(instance) ? instance.id : nil)), {:multipart => true, :method => 'post', :autocomplete => "off"}) do %>
         <label><%=I18n.t("referrals.type_label")%>
           <%= select_tag("referral_type", options_for_select(@referral_roles.map {|r| [r.name, r.id]}, '')) %>
         </label>
