--- a/app/views/transfers/_button.html.erb
+++ b/app/views/transfers/_button.html.erb
@@ -11,7 +11,7 @@
 
   <div id="transfer-modal" class="reveal-modal tiny" data-reveal>
     <a class="close-reveal-modal">&#215;</a>
-    <%= form_tag(url_for(:action => 'transfer'), {:multipart => true, :method => 'post', :autocomplete => "off"}) do %>
+    <%= form_tag(url_for(:action => 'transfer', :id => (defined?(instance) ? instance.id : nil)), {:multipart => true, :method => 'post', :autocomplete => "off"}) do %>
         <label><%=I18n.t("transfers.type_label")%>
           <%= select_tag("transfer_type", options_for_select(@transfer_roles.map {|r| [r.name, r.id]}, '')) %>
         </label>
