Customize Form Add Field modal form is not displayed properly

--- a/app/assets/stylesheets/primero/page.scss
+++ b/app/assets/stylesheets/primero/page.scss
@@ -188,6 +188,10 @@ table.dataTable {
   border-left: 1px solid $stroke_green_color;
 }
 
+.reveal-modal .side-tab-content-container {
+  width: 688px;
+}
+
 ////////////////////////////////////////////////
 // Panel
 ////////////////////////////////////////////////
