--- a/app/views/transfers/_button.html.erb
+++ b/app/views/transfers/_button.html.erb
@@ -5,13 +5,14 @@
 <%# TODO - tweak for transfer%>
 <% if can?(:transfer, controller.model_class) %>
 <li>
-  <a data-reveal-id="transfer-modal" href="#">
+  <a data-reveal-id="transfer-modal" class=<%= (defined?(instance) ? "" : "transfer_index_action") %> href="#">
     <%= t("buttons.transfer", model: model_name) %>
   </a>
 
   <div id="transfer-modal" class="reveal-modal tiny" data-reveal>
     <a class="close-reveal-modal">&#215;</a>
     <%= form_tag(url_for(:action => 'transfer', :id => (defined?(instance) ? instance.id : nil)), {:multipart => true, :method => 'post', :autocomplete => "off"}) do %>
+        <%= hidden_field_tag "selected_transfer_records"%>
         <label><%=I18n.t("transfers.type_label")%>
           <%= select_tag("transfer_type", options_for_select(@transfer_roles.map {|r| [r.name, r.id]}, '')) %>
         </label>
