--- a/app/views/home/_caseload.html.erb
+++ b/app/views/home/_caseload.html.erb
@@ -3,7 +3,7 @@
   <h4><%= t("dashboard.status_of_cases") %></h4>
  </div>
  <div class="panel_content no-padding panel_main">
- <% if records %>
+ <% if records.present? %>
   <table cellspacing="0" cellpadding="0" class="table-floating-header">
     <thead>
       <tr>
@@ -37,7 +37,7 @@
     </tbody>
   </table>
   <% else %>
-    <p><%= t("dashboard.no_caseworker_data") %></p>
+    <p class="no-content"><%= t("dashboard.no_caseworker_data") %></p>
   <% end %>
  </div>
 </div>
