--- a/app/views/home/_open_incidents.html.erb
+++ b/app/views/home/_open_incidents.html.erb
@@ -3,7 +3,7 @@
   <h4><%= t("dashboard.open_incidents") %></h4>
  </div>
  <div class="panel_content no-padding panel_main">
- <% if open_incidents %>
+ <% if open_incidents.present? %>
   <table cellspacing="0" cellpadding="0">
     <thead>
       <tr>
@@ -32,7 +32,7 @@
     </tbody>
   </table>
   <% else %>
-    <p><%= t("dashboard.no_open_incidents") %></p>
+    <p class="no-content"><%= t("dashboard.no_open_incidents") %></p>
   <% end %>
  </div>
 </div>
