--- a/app/views/home/_scheduled_activities.html.erb
+++ b/app/views/home/_scheduled_activities.html.erb
@@ -3,7 +3,7 @@
   <h4><%= t("dashboard.scheduled_activities") %></h4>
  </div>
  <div class="panel_content no-padding panel_main">
- <% if scheduled_activities %>
+ <% if scheduled_activities.present? %>
   <table cellspacing="0" cellpadding="0" class="table-floating-header">
     <thead>
       <tr>
@@ -35,7 +35,7 @@
     </tbody>
   </table>
   <% else %>
-    <p><%= t("dashboard.no_scheduled_activities") %></p>
+    <p class="no-content"><%= t("dashboard.no_scheduled_activities") %></p>
   <% end %>
  </div>
 </div>
