Adding loading spinner to page actions

--- a/app/assets/stylesheets/primero/page.scss
+++ b/app/assets/stylesheets/primero/page.scss
@@ -192,6 +192,38 @@ table.dataTable {
   width: 688px;
 }
 
+.loading-screen {
+  display: none;
+
+  .ls-bg {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: black;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 10000;
+    left: 0;
+  }
+
+  .ls-icon {
+    position: fixed;
+    z-index: 10001;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+
+    i {
+      font-size: 6rem;
+      color: rgba(255,255,255,.7);
+    }
+  }
+}
+
 ////////////////////////////////////////////////
 // Panel
 ////////////////////////////////////////////////
