--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -78,5 +78,11 @@
 <%= render 'exports/password_prompt' %>
 <div class="spacer"></div>
 <script>$(document).foundation();</script>
+<div class="loading-screen">
+  <div class="ls-icon">
+    <i class="fa fa-refresh fa-spin"></i>
+  </div>
+  <div class="ls-bg"></div>
+</div>
 </body>
 </html>
