--- a/app/views/transfers/_button.html.erb
+++ b/app/views/transfers/_button.html.erb
@@ -12,7 +12,7 @@
   <div id="transfer-modal" class="reveal-modal tiny" data-reveal>
     <a class="close-reveal-modal">&#215;</a>
     <%= form_tag(url_for(:action => 'transfer', :id => (defined?(instance) ? instance.id : nil)), {:multipart => true, :method => 'post', :autocomplete => "off"}) do %>
-        <%= hidden_field_tag "selected_transfer_records"%>
+        <%= hidden_field_tag "selected_records"%>
         <label><%=I18n.t("transfers.type_label")%>
           <%= select_tag("transfer_type", options_for_select(@transfer_roles.map {|r| [r.name, r.id]}, '')) %>
         </label>
