Checkbox for grouping ages in reports.

--- a/app/views/reports/_editable.html.erb
+++ b/app/views/reports/_editable.html.erb
@@ -100,6 +100,8 @@
     <span></span>
   </div>
 </div>
+<%# Group ages%>
+<%= resource_edit_field(object, 'group_ages', 'report.group_ages', 'check_box') %>
 <%# Filter by %>
 <div class="row">
   <div class="medium-3 columns">
