added field asking if referring or transferring to a remote system

--- a/app/views/referrals/_button.html.erb
+++ b/app/views/referrals/_button.html.erb
@@ -31,7 +31,10 @@
         <label><%=I18n.t("referrals.notes_label")%>
           <%= text_area_tag("notes") %>
         </label>
-        <label><%=I18n.t("referrals.remote_primero_label")%>
+        <label><%=I18n.t("referrals.is_remote_label")%>
+          <%= check_box_tag("is_remote", "true") %>
+        </label>
+        <label class="remote_toggle" style="display:none"><%=I18n.t("referrals.remote_primero_label")%>
           <%= check_box_tag("remote_primero", "true") %>
         </label>
         <div class="import_button">
