--- a/app/assets/stylesheets/primero/forms_fields.scss
+++ b/app/assets/stylesheets/primero/forms_fields.scss
@@ -98,6 +98,10 @@ input[type="text"][disabled]{
   border: none !important;
 }
 
+.empty_violations {
+  text-align: center;
+}
+
 .gq_popovers {
   padding: 0;
   font-size: $thirteen_px;
