--- a/app/views/record_shared/_actions.html.erb
+++ b/app/views/record_shared/_actions.html.erb
@@ -4,7 +4,11 @@
     <ul>
       <%= render 'imports/button' %>
       <%= render 'exports/button', locals: { model: model } %>
-      <%#TODO - if this is made available for other models, routes will have to be added%>
+      <%
+        #TODO - For now, only implementing transfer and referral for Cases
+        #TODO - At some point, it will be available for other record types
+        #TODO - When that happens, routes will have to be added
+      %>
       <% if model == Child %>
         <%= render 'referrals/button' %>
         <%= render 'transfers/button' %>
