--- a/app/views/referrals/_button.html.erb
+++ b/app/views/referrals/_button.html.erb
@@ -2,7 +2,6 @@
     model_class_name = controller.model_class.name.underscore.downcase
     model_name = I18n.t("forms.record_types.#{model_class_name}")
 %>
-<%# TODO - tweak for referrals%>
 <% if can?(:referral, controller.model_class) %>
 <li>
   <a data-reveal-id="referral-modal" class=<%= (defined?(instance) ? "" : "referral_index_action") %> href="#">
@@ -38,6 +37,7 @@
           <label><%=I18n.t("referrals.remote_primero_label")%>
             <%= check_box_tag("remote_primero", "true") %>
           </label>
+          <%#TODO - need validation to require password, but only if remote referral%>
           <label><%=I18n.t("encrypt.password_label")%>
             <%= password_field_tag("referral_password") %>
           </label>
