--- a/app/views/referrals/_button.html.erb
+++ b/app/views/referrals/_button.html.erb
@@ -39,7 +39,9 @@
             <label><%=I18n.t("referrals.remote_primero_label")%>
               <%= check_box_tag("remote_primero", "true") %>
             </label>
-            <%#TODO - need validation to require password, but only if remote referral%>
+            <div class='flash hide'>
+              <p class='error'></p>
+            </div>
             <label><%=I18n.t("encrypt.password_label")%>
               <%= password_field_tag("referral_password") %>
             </label>
