--- a/app/views/transfers/_button.html.erb
+++ b/app/views/transfers/_button.html.erb
@@ -36,7 +36,9 @@
             <label><%=I18n.t("transfers.remote_primero_label")%>
               <%= check_box_tag("remote_primero", "true") %>
             </label>
-            <%#TODO - need validation to require password, but only if remote transfer%>
+            <div class='flash hide'>
+              <p class='error'></p>
+            </div>
             <label><%=I18n.t("encrypt.password_label")%>
               <%= password_field_tag("transfer_password") %>
             </label>
