--- a/app/assets/stylesheets/primero/forms_fields.scss
+++ b/app/assets/stylesheets/primero/forms_fields.scss
@@ -79,7 +79,7 @@ a.chosen-single {
   box-shadow: none !important;
 }
 
-input[type="text"][disabled]{
+input[type="text"][disabled], select[disabled]{
   border: none !important;
   background: transparent !important;
   box-shadow: none;
