--- a/app/views/transfers/_button.html.erb
+++ b/app/views/transfers/_button.html.erb
@@ -18,7 +18,7 @@
             <%= select_tag("transfer_type", options_for_select(@transfer_roles.map {|r| [r.name, r.id]}, '')) %>
           </label>
           <label><%=I18n.t("transfers.existing_user_label")%>
-            <%= select_tag("existing_user", options_for_select(@associated_users, @current_user.user_name)) %>
+            <%= select_tag("existing_user", options_for_select(@associated_users, ''), :include_blank => true) %>
           </label>
           <label><%=I18n.t("transfers.other_user_label")%>
             <%= text_field_tag("other_user") %>
