--- a/app/views/form_section/_form_section.html.erb
+++ b/app/views/form_section/_form_section.html.erb
@@ -5,6 +5,7 @@
 
   <% if form_section.form_group_name.present? && form_section.form_group_name == 'Violations' %>
     <div class="row empty_violations"><%= t('incident.empty_violation') %></div>
+    <div class="row add_violations_message"><%= t('incident.add_violations') %></div>
   <% end %>
 
   <% (form_section.fields.select {|field| field.visible? }).each do |field| %>
