--- a/app/views/exports/_button.html.erb
+++ b/app/views/exports/_button.html.erb
@@ -4,7 +4,8 @@
   <ul style="display:none;">
     <% Exporters::active_exporters_for_model(controller.model_class).each do |exporter| %>
       <%# Find out if the exporter should be visible on the current page %>
-      <% if exporter_visible_page?(exporter.id, defined?(instance) ? [instance.module_id] : @current_modules.map{|m| m.id}) %>
+      <% module_ids = defined?(instance) ? [instance.module_id] : (@current_modules.present? ? @current_modules.map{|m| m.id} : []) %>
+      <% if exporter_visible_page?(exporter.id, module_ids) %>
       <li>
       <%= link_to(t("exports.#{exporter.id}.#{defined?(instance) ? 'one' : 'all'}"),
                     url_for(:format => exporter.id, :page => "all", :per_page => :all, :id => (defined?(instance) ? instance.id : nil), :params => exporter_params_page(exporter.id, params)),
