--- a/app/views/users/_users_table.html.erb
+++ b/app/views/users/_users_table.html.erb
@@ -2,9 +2,8 @@
   <% if can? :create,User %>
       <%= link_to content_tag(:span, t("users.create"), :class => 'create_user'), new_user_path, :class => 'btn green-button' %>
   <% end %>
-  <%#= render 'exports/button' %>
-  <%# TODO: Hiding imports so that QA doesn't get into trouble %>
-  <%#= render 'imports/button' %>
+
+  <%= render partial: 'record_shared/actions', locals: {model: User} %>
   <%= render :partial => 'configuration_bundle/export_button' %>
   <%= render :partial => 'configuration_bundle/import_button' %>
 <% end %>
