Log Transfers in History. Combined transfer_actions and refer_actions concerns into transition_actions in oreder to DRY it up

--- a/app/views/referrals/_button.html.erb
+++ b/app/views/referrals/_button.html.erb
@@ -43,11 +43,11 @@
               <p class='error'></p>
             </div>
             <label><%=I18n.t("encrypt.password_label")%>
-              <%= password_field_tag("referral_password") %>
+              <%= password_field_tag("password") %>
             </label>
             <small><%= t("encrypt.password_extra_info") %></small>
             <label><%=I18n.t("encrypt.file_name")%>
-              <%= text_field_tag("referral_file_name") %>
+              <%= text_field_tag("file_name") %>
             </label>
           </div>
           <div class="import_button">
