--- a/app/views/transfers/_button.html.erb
+++ b/app/views/transfers/_button.html.erb
@@ -40,11 +40,11 @@
               <p class='error'></p>
             </div>
             <label><%=I18n.t("encrypt.password_label")%>
-              <%= password_field_tag("transfer_password") %>
+              <%= password_field_tag("password") %>
             </label>
             <small><%= t("encrypt.password_extra_info") %></small>
             <label><%=I18n.t("encrypt.file_name")%>
-              <%= text_field_tag("transfer_file_name") %>
+              <%= text_field_tag("file_name") %>
             </label>
           </div>
           <div class="import_button">
