Added some more width to modal

--- a/app/assets/stylesheets/primero/forms_fields.scss
+++ b/app/assets/stylesheets/primero/forms_fields.scss
@@ -160,6 +160,10 @@ p.help {
   }
 }
 
+#add_field_modal {
+  width: 100%;
+}
+
 ////////////////////////////////////////////////
 // Fields
 ////////////////////////////////////////////////
