--- a/app/views/transfers/_button.html.erb
+++ b/app/views/transfers/_button.html.erb
@@ -12,10 +12,11 @@
     <a class="close-reveal-modal">&#215;</a>
     <div class="transfer_form_container row">
       <div class="large-11">
-        <%= form_tag(url_for(:action => 'transfer', :id => (defined?(instance) ? instance.id : nil)), {:multipart => true, :method => 'post', :autocomplete => "off"}) do %>
+        <%= form_tag(url_for(:action => 'transition', :id => (defined?(instance) ? instance.id : nil)), {:multipart => true, :method => 'post', :autocomplete => "off"}) do %>
           <%= hidden_field_tag "selected_records"%>
+          <%= hidden_field_tag "transition_type", Transition::TYPE_TRANSFER%>
           <label><%=I18n.t("transfers.type_label")%>
-            <%= select_tag("transfer_type", options_for_select(@transfer_roles.map {|r| [r.name, r.id]}, '')) %>
+            <%= select_tag("transition_role", options_for_select(@transfer_roles.map {|r| [r.name, r.id]}, '')) %>
           </label>
           <label><%=I18n.t("transfers.existing_user_label")%>
             <%= select_tag("existing_user", options_for_select(@associated_users, ''), :include_blank => true) %>
