--- a/app/assets/stylesheets/primero/page.scss
+++ b/app/assets/stylesheets/primero/page.scss
@@ -184,6 +184,32 @@ table.dataTable {
   }
 }
 
+table.dataTable.dtr-inline.collapsed tbody td:first-child:before,
+table.dataTable.dtr-inline.collapsed tbody th:first-child:before {
+  top: 8px;
+  left: 4px;
+  height: 16px;
+  width: 16px;
+  display: block;
+  position: absolute;
+  border: 2px solid white;
+  text-align: center;
+  line-height: 12px;
+  content: '+';
+  background-color: #f9faf6;
+  border: 0.08em solid #aec687;
+  color: #86a05d;
+  box-shadow: none;
+  border-radius: 0px;
+}
+
+table.dataTable.dtr-inline.collapsed tbody tr.parent td:first-child:before,
+table.dataTable.dtr-inline.collapsed tbody tr.parent th:first-child:before {
+  content: '-';
+  background-color: inherit;
+  line-height: 14px;
+}
+
 .side-tab-content.no-side-bar {
   border-left: 1px solid $stroke_green_color;
 }
