--- a/app/views/record_shared/_list_view_table.html.erb
+++ b/app/views/record_shared/_list_view_table.html.erb
@@ -9,12 +9,12 @@
 %>
 <div class="index_controls_container" data-top="50" data-bottom="40">
   <div class="row collapse">
-    <div class="large-9 columns">
+    <div class="large-9 small-9 columns">
       <div class="row collapse">
-        <div class="large-6 columns">
+        <div class="large-6 small-6 columns">
           <div class="pagination_info"><%= page_entries_info collection %></div>
         </div>
-        <div class="large-6 columns">
+        <div class="large-6 small-6 columns">
           <%= render partial: "record_shared/header",
                      locals: {
                        model: model, record: record, modules: @current_modules,
@@ -25,7 +25,7 @@
         </div>
       </div>
     </div>
-    <div class="large-3 columns">
+    <div class="large-3 small-3 columns">
       <% if options[:display_filter] %>
         <div class="filter_title left"><%= t("buttons.filter_label") %></div>
         <%= link_to t("buttons.filter"),'', class: 'green-button right', id: 'apply_filter' %>
@@ -34,7 +34,7 @@
   </div>
 </div>
 <div class="row collapse">
-  <div class="large-9 columns">
+  <div class="large-9 small-9 columns">
     <div class="clearfix"></div>
     <table style="width: 100%;" class="record_list_view dataTable no-footer collapsed dtr-inline" cellpadding="0" cellspacing="0">
       <% header_list = list_view_header(record)%>
@@ -53,7 +53,7 @@
     </table>
     <div class="table_spacer"></div>
   </div>
-  <div class="large-3 columns index_filters">
+  <div class="large-3 small-3 columns index_filters">
     <%= render "#{controller.controller_name}/filter", filters_to_show: index_filters_to_show(record) %>
   </div>
 </div>
