--- a/app/assets/stylesheets/primero/page.scss
+++ b/app/assets/stylesheets/primero/page.scss
@@ -231,6 +231,10 @@ table.dataTable {
 .panel {
   background: #f5f5f5;
   border: 1px solid #ccc;
+
+  &.record_status p {
+    line-height: 1.1rem;
+  }
 }
 
 ////////////////////////////////////////////////
